Closed Bug 196956 Opened 23 years ago Closed 23 years ago

nsStyleContext::Release() does not need to set mRefCnt to 1 on destruction

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

(Whiteboard: [whitebox])

Attachments

(1 file)

This was copied from nsISupportsImpl's Release() implementation, but after reading the comment there about why, it sounds like it's only relevant for nsISupports-derived classes.
Attached patch patchSplinter Review
The comment I mentioned about the refcount stabilization is at: http://lxr.mozilla.org/seamonkey/source/xpcom/glue/nsISupportsImpl.h#208
Attachment #116903 - Flags: superreview?(dbaron)
Attachment #116903 - Flags: review?(dbaron)
Attachment #116903 - Flags: superreview?(dbaron)
Attachment #116903 - Flags: superreview+
Attachment #116903 - Flags: review?(dbaron)
Attachment #116903 - Flags: review+
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verification can be done at code level
Whiteboard: [whitebox]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: