Don't need to stabilize mRefCnt to 1 in nsStyleContext dtor (bug 196956). r/sr=dbaron.